# mereb-gprc

./: .gitignore  README.md
backend/: README.md  celery_app.py  csv_processor.proto  csv_processor_pb2.py  csv_processor_pb2_grpc.py  csv_processor_server.py  csv_processor_service.py  gateway.py  main.py  pyproject.toml  test_csv_processor.py
backend/grpc_server/: csv_processor_pb2_grpc.py  csv_processor_server.py  csv_processor_service.py
backend/results/: ab9aa5a9-4ab6-4c73-b70e-3a20eb2c4c85_result.csv
backend/test_csvs/: test_sales1.csv  test_sales2.csv  test_sales3.csv
backend/uploads/: b46e7f1c-813d-40e2-a8b3-d8673fa37c04_result.csv
frontend/: README.md
frontend/src/: App.css  App.jsx
